# docker-satysfi-demo

./: .gitmodules  README.md  doc.saty
.github/actions/satysfi/: Dockerfile  README.md  action.yml  entrypoint.sh
.github/workflows/: build.yml
01-simple-example/: doc.saty
02-library-example/: commands.satyh  doc.saty
03-submodule-example/: doc.saty
04-satyrographos-example/: doc.saty
05-custom-action-example/: doc.saty
06-satyrographos-opam-example/: Makefile  README.md  Satyristes  satysfi-example-doc.opam  satysfi-example.opam
06-satyrographos-opam-example/doc/: manual.saty
06-satyrographos-opam-example/src/: example.satyh
06-satyrographos-opam-example/test/: .gitignore  test.saty
